Add env var in CI config

--- a/.github/workflows/shortenertest.yml
+++ b/.github/workflows/shortenertest.yml
@@ -20,6 +20,8 @@ jobs:
     runs-on: ubuntu-latest
     container: golang:1.22
     needs: branchtest
+    env:
+      SECRET_KEY: "t{$z]P%bwE"
 
     services:
       postgres:
