--- a/.github/workflows/shortenertest.yml
+++ b/.github/workflows/shortenertest.yml
@@ -61,7 +61,7 @@ jobs:
       - name: Install migrate tool
         run: |
           curl -L https://github.com/golang-migrate/migrate/releases/download/v4.17.0/migrate.linux-amd64.tar.gz | tar xvz
-          sudo mv migrate /usr/local/bin/
+          mv migrate /usr/local/bin/
 
       - name: Run database migrations
         run: |
